Fixed: UI prism problem