@@ -81,23 +81,23 @@ graalvmNative {
         main {
             imageName = 'JVDM'
             mainClass = application.mainClass.get()
-            debug = false
-            verbose = true
-            fallback = false
-            sharedLibrary = false
-            quickBuild = false
-            richOutput = true
-            useFatJar = false
 
             if (!os.isMacOsX()) buildArgs.add('-H:+StripDebugInfo')
-            buildArgs.add('-O3')
             buildArgs.add('-H:GenerateDebugInfo=0')
+
+            // Performance
+            buildArgs.add('-O3')
             buildArgs.add('-H:+UnlockExperimentalVMOptions')
+            buildArgs.add('-Dio.netty.allocator.type=pooled')
+            buildArgs.add('-Dprism.vsync=true')
+            buildArgs.add('-R:MaxDirectMemorySize=4G')
+            def pgo = file("src/pgo-profiles/main/default.iprof")
+            if (pgo.exists()) {
+                buildArgs.add("--pgo=${pgo.absolutePath}")
+            }
 
+            // Libraries
             buildArgs.add('-H:IncludeResources=.*\\.(fxml|css|png|jpg|jpeg|svg|properties|ttf|otf|ico|icns|so|dll|dylib|frag|vert|glsl|hlsl|cl|bsm|obj)$')
-            buildArgs.add('--enable-url-protocols=http,https')
-            buildArgs.add('--enable-native-access=ALL-UNNAMED')
-
             buildArgs.add('--initialize-at-run-time=io.netty.handler.ssl.ReferenceCountedOpenSslEngine')
             buildArgs.add('--initialize-at-run-time=io.netty.internal.tcnative.CertificateVerifier')
             buildArgs.add('--initialize-at-run-time=io.netty.internal.tcnative.SSLPrivateKeyMethod')
@@ -108,21 +108,18 @@ graalvmNative {
             buildArgs.add('--initialize-at-run-time=org.Kroj.Core.Network.Download.Security.TLS')
             buildArgs.add('--initialize-at-run-time=org.Kroj.Core.Network.SocketBind.PanamaBinder')
 
-            def pgo = file("src/pgo-profiles/main/default.iprof")
-            if (pgo.exists()) {
-                buildArgs.add("--pgo=${pgo.absolutePath}")
+
+            // Compatibility
+            buildArgs.add('-march=compatibility')
+            if (os.isWindows()) {
+                buildArgs.add('-H:NativeLinkerOption=/SUBSYSTEM:WINDOWS')
+                buildArgs.add('-H:NativeLinkerOption=/ENTRY:mainCRTStartup')
             }
 
-            def currentArch = System.getProperty("os.arch").toLowerCase()
-            buildArgs.add('-march=compatibility')
-
+            // Prevent Error/Warning
             buildArgs.add('-Dio.netty.tryReflectionSetAccessible=true')
-            buildArgs.add('-Dio.netty.allocator.type=pooled')
+            buildArgs.add('--enable-url-protocols=http,https')
             buildArgs.add('--enable-native-access=ALL-UNNAMED')
-            buildArgs.add('-H:WindowsSubsystem=windows') // Only applies to windows, for hidding bg console
-            buildArgs.add('-Dprism.vsync=true')
-
-            jvmArgs.add('-XX:MaxDirectMemorySize=2G')
 
         }
     }
